<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/skyblue"
    android:orientation="vertical">


    <!-- Not using just create space between view -->
    <TextView
        android:id="@+id/textViewEmpty10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textViewEmpty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="" />

        <TextView
            android:id="@+id/textViewTimer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Timer"
            android:textAlignment="center"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textViewEmpty2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Question"
            android:textAlignment="textEnd"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <!-- display total and how many question left -->
    <TextView
        android:id="@+id/textViewNums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:text="@string/questionLeft"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- display question -->
    <TextView
        android:id="@+id/textViewQuestions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:gravity="center"
        android:text="@string/question"
        android:textSize="30sp"
        android:textStyle="bold" />

    <!-- Not using just create space between view -->
    <TextView
        android:id="@+id/textViewHints2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hints2"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Not using just create space between view -->
    <TextView
        android:id="@+id/textViewEmpty4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

</LinearLayout>