<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context="my.edu.taruc.lab22profile.MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:fontFamily="casual"
        android:lineSpacingExtra="8sp"
        android:text="Math On The Go"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonMultiplayer"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="44dp"
        android:background="@android:color/background_dark"
        android:onClick="Challenge"
        android:scaleType="fitXY"
        app:layout_constraintStart_toEndOf="@+id/textViewTimer"
        app:layout_constraintTop_toBottomOf="@+id/textViewTimer"
        app:srcCompat="@drawable/multiplayer_pic" />

    <ImageButton
        android:id="@+id/imageButtonPratice"
        android:layout_width="180dp"
        android:layout_height="130dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/background_dark"
        android:backgroundTint="@android:color/background_dark"
        android:onClick="SelectMode"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/textViewTimer"
        app:layout_constraintTop_toTopOf="@+id/textViewTimer"
        app:srcCompat="@drawable/pratice_pic" />

    <TextView
        android:id="@+id/textViewPratice"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/pratice"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonPratice"
        app:layout_constraintStart_toStartOf="@+id/imageButtonPratice"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonPratice" />

    <TextView
        android:id="@+id/textViewMultiplayer"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/multiplayer"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageButtonMultiplayer"
        app:layout_constraintStart_toStartOf="@+id/imageButtonMultiplayer"
        app:layout_constraintTop_toBottomOf="@+id/imageButtonMultiplayer" />

    <TextView
        android:id="@+id/textViewTimer"
        android:layout_width="100dp"
        android:layout_height="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/button"
        android:layout_width="78dp"
        android:layout_height="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/lightgreen"
        android:onClick="History"
        android:text="@string/history"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Small"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textViewTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageButtonMultiplayer"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
